[gd_scene load_steps=5 format=3 uid="uid://muveaa55k24c"]

[ext_resource type="Script" path="res://environment/PoseRecordRoom/pose_recording_room.gd" id="1_e6d01"]
[ext_resource type="PackedScene" uid="uid://1n1kke68mut5" path="res://player/user.tscn" id="2_6rwda"]
[ext_resource type="PackedScene" uid="uid://7ur344am626x" path="res://environment/PoseRecordRoom/hand_pose_capture_area.tscn" id="3_4vv10"]
[ext_resource type="PackedScene" uid="uid://depddl1urdch2" path="res://keyboard/button/Button.tscn" id="4_3uciy"]

[node name="PoseRecordingRoom" type="Node3D"]
script = ExtResource("1_e6d01")

[node name="User" parent="." instance=ExtResource("2_6rwda")]

[node name="AllPoses" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.43259, 0.902837, -0.432391)

[node name="One" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Two" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Three" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Four" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Five" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Fist" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Grip" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Rest" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Horns" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Metal" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Middle" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="OK" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Thumb" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="Phone" parent="AllPoses" instance=ExtResource("3_4vv10")]

[node name="PrintSave" parent="AllPoses" instance=ExtResource("4_3uciy")]
transform = Transform3D(1, 0, 0, 0, 0.613362, -0.789802, 0, 0.789802, 0.613362, 1.06661, 0.179111, 0)
custom_label = "Save"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="pressed" from="AllPoses/PrintSave" to="." method="_on_print_save_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
